# dockup

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: agent-release.yml  docker-release.yml
agent/: Cargo.toml  build.sh
agent/src/: config.rs  docker.rs  main.rs  registry.rs  selfupdate.rs  updater.rs  ws.rs
api/: Cargo.toml  Dockerfile
api/migrations/: 0001_initial.sql  0002_add_compose_service.sql
api/src/: auth.rs  main.rs  models.rs
api/src/db/: schema.rs
api/src/routes/: agent.rs  clients.rs  containers.rs  mod.rs  onboarding.rs  updates.rs  ws.rs
web/: Dockerfile  package-lock.json  package.json  tailwind.config.mjs
web/src/components/: ClientCard.astro  ContainerGrid.astro  Layout.astro  ThemeToggle.astro  UpdateJobStream.astro
web/src/lib/: api.ts  theme.ts
web/src/pages/: history.astro  index.astro
web/src/pages/api/: proxy.ts
web/src/pages/clients/: [id].astro  index.astro  new.astro
