[package]
name = "dockup-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dockup-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
bollard = "0.16"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
