[package]
name = "dockup-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dockup-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ssh2 = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.21"
futures = "0.3"
anyhow = "1"
thiserror = "1"
